--- a/css/style.css
+++ b/css/style.css
@@ -99,12 +99,22 @@
     padding: 50px 0 100px;
 }
 
+.hero .row.grid,
+.hero .card__head {
+    gap: 25px;
+}
+
 .hero .card {
     background-color: var(--light-blue);
     border-radius: 10px;
     padding: 35px 30px 0;
-    align-items: flex-start;
     gap: 2rem;
+    height: 100%;
+    line-height: 2rem;
+}
+
+.hero #main__card .card__head {
+    align-items: flex-start;
 }
 
 .hero .card__icon {
@@ -122,23 +132,53 @@
     padding-bottom: 35px;
 }
 
+.hero #main__card .card__img img {
+    display: block;
+}
+
 
 
 
 /* Media Query */
 
 /* Versione Tablet - medium bootstrap */
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+
+    /* HERO */
+    .hero .row.grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .col-span-2 {
+        grid-column: span 2;
+    }
+
+}
 
 /* Versione Desktop - large bootstrap */
 @media (min-width: 992px) {
 
+    /* HEADER */
     .main-header .nav__list {
         display: block;
     }
 
     .main-header .nav__bars {
         display: none;
+    }
+
+    /* HERO */
+    .hero #main__card {
+        flex-direction: row;
+    }
+
+    .hero #main__card>* {
+        flex-basis: 0;
+        flex-grow: 1;
+    }
+
+    .hero #main__card .card__img {
+        align-self: flex-end;
     }
 
 }
@@ -150,6 +190,6 @@
     padding: 10px;
 }
 
-.debug .hero .card {
+/* .debug .hero .card {
     border: 3px solid cornflowerblue;
-}
+} */
