--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,10 @@ section:nth-child(even) {
         padding: 12.5px;
     }
 
+    .hero .row.flex>*:nth-child(n+2) {
+        padding-bottom: 0;
+    }
+
     .hero .col.col-span-2 {
         flex-basis: calc(100% / 3 * 2);
     }
