--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,7 @@ section:nth-child(even) {
     background-color: #FFF;
     padding: 2rem;
     flex-basis: 100%;
+    align-items: flex-start;
 }
 
 .benefits .row.flex {
