--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,12 @@ section:nth-child(even) {
 }
 
 .hero .card__icon,
-.hero .card__title {
+.hero .hero-card__title {
     color: var(--blue);
+}
+
+.hero .hero-card__title {
+    font-size: 1.5rem;
 }
 
 .hero .card:not([id="main__card"]) {
@@ -371,7 +375,7 @@ section:nth-child(even) {
         flex-basis: calc(((100% - 50px) / 3 * 2) + 25px);
     } */
 
-    /* SOLUZIONE CON FLEX BASIS + GROW 
+    /* SOLUZIONE CON FLEX BASIS + GROW */
     .hero .row.flex>* {
         flex-basis: 30%;
         flex-grow: 1;
@@ -380,25 +384,10 @@ section:nth-child(even) {
     .hero .col.col-span-2 {
         flex-basis: calc(60% + 12.5px);
         flex-grow: 2;
-    }*/
-
-    /* SOLUZIONE CON FLEX + PADDING E MARGIN NEGATIVO */
-    .hero .row.flex>* {
-        flex-basis: calc(100% / 3);
-        padding: 12.5px;
     }
 
     .hero {
         padding-bottom: calc(100px - 12.5px);
-    }
-
-    .hero .col.col-span-2 {
-        flex-basis: calc(100% / 3 * 2);
-    }
-
-    .hero .row.flex {
-        gap: 0;
-        margin: 0 -12.5px;
     }
 
     /* PLANNING */
