--- a/css/style.css
+++ b/css/style.css
@@ -201,9 +201,9 @@ section:nth-child(even) {
 .planning .card {
     background-color: #FFF;
     border-radius: 50px;
-    padding: 35px 25px;
+    padding: 2rem 1.5rem;
     text-align: center;
-    gap: 35px;
+    gap: 1.5rem;
 }
 
 .planning .arrow__down i {
@@ -499,8 +499,8 @@ section:nth-child(even) {
         width: 250px;
     }
 
-    .planning .col.flex.planning__dev>* {
-        flex-direction: column;
+    .planning .col.flex.planning__dev {
+        /* flex-direction: column; */
         align-self: flex-end;
     }
 
