--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
 }
 
 .container-xs {
-    max-width: 35.5rem;
+    max-width: 19rem;
     margin: 0 auto;
     text-align: center;
 }
@@ -365,13 +365,17 @@ section:nth-child(even) {
 
 .started .started__sub-title {
     font-size: 1.5rem;
-    padding: 0 2.5rem;
+    padding: 0 1.75rem;
 }
 
 .started .started__free {
     color: var(--yellow);
-    font-size: 2.5rem;
-    padding: 3.5rem 0;
+    font-size: 3rem;
+    padding: 3rem 0;
+}
+
+.started .started__paragraph {
+    line-height: 1.75rem;
 }
 
 .started div.flex {
@@ -383,11 +387,6 @@ section:nth-child(even) {
 .started ul {
     font-size: 0.75rem;
 }
-
-.started .started__paragraph {
-    padding: 0 2.5rem;
-}
-
 
 .started .button {
     padding: 1.5rem 5.25rem;
@@ -412,11 +411,25 @@ section:nth-child(even) {
     text-decoration: underline;
 }
 
-
 /******************************************************
-    FOOTER
+FOOTER
 *******************************************************/
 
+.main-footer {
+    background-color: var(--dark-grey);
+    color: #FFF;
+    padding: 2.5rem 0;
+    text-align: center;
+}
+
+.main-footer .footer__paragraph:first-child {
+    margin-bottom: 4rem;
+}
+
+.main-footer .footer__link {
+    color: var(--links-color);
+    text-decoration: underline;
+}
 
 /******************************************************
     MEDIA QUERY
@@ -424,6 +437,10 @@ section:nth-child(even) {
 
 /* Versione Tablet - medium bootstrap */
 @media (min-width: 768px) {
+
+    .container-xs {
+        max-width: 25.75rem;
+    }
 
     /* HERO */
 
@@ -525,6 +542,10 @@ section:nth-child(even) {
     }
 
     /* GET STARTED */
+    .started .container-xs {
+        max-width: 36rem;
+    }
+
     .started .started__sub-title {
         font-size: 2.75rem;
         padding: 0;
@@ -533,6 +554,10 @@ section:nth-child(even) {
     .started .started__free {
         font-size: 4.25rem;
         padding: 3.5rem 0;
+    }
+
+    .started .started__paragraph {
+        padding: 0 3.125rem;
     }
 
     .started p,
